--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@stitches/react": "^1.2.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -32,12 +33,16 @@
     "@storybook/addon-interactions": "^6.5.15",
     "@storybook/addon-jest": "^6.5.15",
     "@storybook/addon-links": "^6.5.15",
+    "@storybook/builder-vite": "^0.3.0",
     "@storybook/builder-webpack5": "^6.5.15",
     "@storybook/manager-webpack5": "^6.5.15",
     "@storybook/react": "^6.5.15",
+    "@storybook/test-runner": "^0.9.3",
     "@storybook/testing-library": "^0.0.13",
+    "@storybook/testing-react": "^1.3.0",
     "babel-loader": "^8.3.0",
     "jest-environment-jsdom": "^29.3.1",
-    "storybook-addon-designs": "^6.3.1"
+    "storybook-addon-designs": "^6.3.1",
+    "vite": "^4.0.4"
   }
 }
